--- a/scss/layout/_player.scss
+++ b/scss/layout/_player.scss
@@ -221,7 +221,7 @@
         width: calc(100vw - 25.9rem);
         left: 25.9rem;
         position: fixed;
-        bottom: 0;
+        bottom: 0.5rem;
         padding: 0.8rem 1.6rem;
     }
     .player-volume-icon {
